[gd_scene load_steps=5 format=2]

[ext_resource path="res://Images/tiger.jpg" type="Texture" id=1]
[ext_resource path="res://Demo/Drag and Drop.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 768, 768 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 24 )

[node name="DragDropPlayer" type="KinematicBody2D" groups=[
"tiger",
]]
script = ExtResource( 2 )

[node name="tiger" type="Sprite" parent="."]
scale = Vector2( 0.03125, 0.03125 )
texture = ExtResource( 1 )

[node name="TigerArea" type="Area2D" parent="tiger"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="tiger/TigerArea"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="RayCastDown" type="RayCast2D" parent="."]
rotation = 0.00585857
enabled = true
cast_to = Vector2( 0, 60 )

[node name="RayCastRight" type="RayCast2D" parent="."]
rotation = -1.586
enabled = true
cast_to = Vector2( 0, 60 )

[node name="RayCastUp" type="RayCast2D" parent="."]
rotation = -3.13748
enabled = true
cast_to = Vector2( 0, 60 )

[node name="RayCastLeft" type="RayCast2D" parent="."]
rotation = -4.704
enabled = true
[connection signal="input_event" from="tiger/TigerArea" to="." method="_on_Area2D_input_event"]
